backend/k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: wprb-rocks-pod
  namespace: wprb-rocks
spec:
  restartPolicy: Never
  containers:
  - name: wprb-rocks-pod
    image: gammons1/wprb-rocks:v51
    command:
      - "/bin/bash"
      - "-c"
      - "sleep 10000"
