backend/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wprb-rocks-deploy
  namespace: wprb-rocks
  labels:
    app: wprb-rocks-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wprb-rocks-backend
  template:
    metadata:
      labels:
        app: wprb-rocks-backend
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: wprb-rocks-backend
        image: ghcr.io/gammons/wprb-rocks:latest
        imagePullPolicy: Always
        # readinessProbe:
        #   httpGet:
        #     path: "/hb"
        #     port: 3000
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        # livenessProbe:
        #   httpGet:
        #     path: "/hb"
        #     port: 3000
        #   initialDelaySeconds: 10
        #   periodSeconds: 5
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: sqlite-storage
          mountPath: /myapp/data
        command:
          - "/bin/bash"
          - "-c"
          - "rm -f tmp/pids/server.pid && bin/rails db:migrate && bin/rails s -p 3000 -b '0.0.0.0'"
      volumes:
      - name: sqlite-storage
        persistentVolumeClaim:
          claimName: wprb-rocks-sqlite-pvc-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: wprb-rocks-backend-service
  namespace: wprb-rocks
spec:
  type: LoadBalancer
  selector:
    app: wprb-rocks-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
