backend/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wprb-rocks-ingress
  namespace: wprb-rocks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
  - host: api.wprb.rocks
    http:
      paths:
      - path: /
        backend:
          serviceName: wprb-rocks-backend-service
          servicePort: 3000
      - path: /ws
        backend:
          serviceName: wprb-rocks-websockets-service
          servicePort: 8080
  tls:
  - hosts:
    - api.wprb.rocks
    secretName: wprb-rocks-io-cert
